test/integration/bad/new/type-size-bad23.stan
data { matrix[print(0), 1] x;}